# GranjaTechTeste

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  plano-migracao-granjatech.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
granjatech-api/: .dockerignore  .env.example  Cargo.toml  Dockerfile
granjatech-api/src/: config.rs  db.rs  errors.rs  main.rs
granjatech-api/src/dto/: auth.rs  avicultura.rs  consumo.rs  dashboard.rs  estoque.rs  financeiro.rs  granja.rs  lote.rs  mod.rs  pesagem.rs  profile.rs  relatorios.rs  sanitario.rs  sensor.rs
granjatech-api/src/handlers/: auditoria.rs  auth.rs  avicultura.rs  consumo.rs  dashboard.rs  estoque.rs  financas.rs  granjas.rs  leituras.rs  lotes.rs  mod.rs  pesagem.rs  profile.rs  relatorios.rs  sanitario.rs  sensores.rs
granjatech-api/src/middleware/: jwt.rs
granjatech-api/src/models/: consumo.rs  evento_sanitario.rs  financeiro_produtor.rs  granja.rs  log_auditoria.rs  lote.rs  mod.rs  pesagem_semanal.rs  produto.rs  qualidade_ar.rs  registro_abate.rs  registro_mortalidade.rs  sensor.rs  transacao_financeira.rs  usuario.rs
granjatech-api/src/services/: auditoria_service.rs  auth_service.rs  avicultura_service.rs  cache_service.rs  consumo_service.rs  dashboard_service.rs  estoque_service.rs  financas_service.rs  granja_service.rs  lote_service.rs  mod.rs  pesagem_service.rs  profile_service.rs  relatorio_avancado_service.rs  relatorio_service.rs  sanitario_service.rs  sensor_service.rs
granjatech-frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  (+3 more)
(+113 files in other folders)
